fix: make note modal invisible by default

--- a/src/pvtor_frontend.css
+++ b/src/pvtor_frontend.css
@@ -166,6 +166,9 @@ dialog::backdrop {
 .new-note-dialog {
     background-color: #10b981;
     margin: auto;
+}
+
+.new-note-dialog-content {
     display: flex;
     flex-direction: column;
 }
